@@ -1,6 +1,6 @@
 /*
  * Copyright (c) 2011-2024 Qulice.com
-
+ *
  * All rights reserved.
  *
  * Redistribution and use in source and binary forms, with or without
@@ -44,6 +44,8 @@ import com.qulice.spi.Violation;
 import java.io.File;
 import java.io.IOException;
 import java.net.MalformedURLException;
+import java.net.URI;
+import java.net.URISyntaxException;
 import java.net.URL;
 import java.util.Collection;
 import java.util.LinkedList;
@@ -239,9 +241,11 @@ public final class CheckstyleValidator implements ResourceValidator {
         final URL url;
         if (name.startsWith("file:")) {
             try {
-                url = new URL(name);
+                url = new URI(name).toURL();
             } catch (final MalformedURLException ex) {
                 throw new IllegalStateException("Invalid URL", ex);
+            } catch (final URISyntaxException ex) {
+                throw new IllegalStateException("Invalid URI", ex);
             }
         } else {
             url = this.env.classloader().getResource(name);
